text align for event block fixed

--- a/WPTheme/socialistalternative/main.css
+++ b/WPTheme/socialistalternative/main.css
@@ -94,7 +94,7 @@ figcaption {
   font-size: 1rem;
 }
 
-.salt-nomargin,
+.salt-nomargin, .salt-homepage,
 .salt-fullwidth .salt-maincontent {
   margin: 0;
   max-width: 100%;
@@ -162,7 +162,8 @@ figcaption {
   margin: 0;
 }
 
-.salt-nomargin + .salt-sidebar {
+.salt-nomargin + .salt-sidebar,
+.salt-homepage + .salt-sidebar {
   border-left: none;
   margin: 0;
 }
@@ -999,6 +1000,24 @@ div .wpforms-field-medium {
 
 /* Homepage */
 
+.salt-homepage {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.salt-homepage .salt-pageheader {
+  display: none;
+}
+.salt-homepage .salt-pagemain {
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+  border-bottom: solid 5px rgb(249, 249, 228);
+}
+
+.salt-homepage .salt-sidebar {
+  display: block;
+}
+
 .salt-infoblock {
   background: linear-gradient(
       190deg,
@@ -1014,7 +1033,7 @@ div .wpforms-field-medium {
   padding: 18px;
   margin: 0;
   color: rgb(249, 249, 228);
-  font-size: 1.2em;
+  font-size: 1.2rem;
   letter-spacing: 1px;
   text-align: right;
 }
@@ -1040,7 +1059,7 @@ div .wpforms-field-medium {
 }
 .salt-homeblock figure {
   width: 30% !important;
-  margin: auto !important;;
+  margin: auto !important;
 }
 
 
@@ -1051,7 +1070,13 @@ div .wpforms-field-medium {
 .salt-upcomingevents ul {
   padding: 0px;
   margin: 0px;
+ 
+}
+.salt-upcomingevents ul p {
   text-align: left;
+}
+.salt-upcomingevents p {
+  text-align: center;
 }
 .salt-event {
   list-style-type: none;
@@ -1178,8 +1203,17 @@ div .wpforms-field-medium {
 }
 @media (min-width: 768px) {
 
+  .salt-homepage {
+    font-size: 0px;
+    min-height: calc(100vh - 300px);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-columns: minmax(auto, 25%);
+    grid-auto-flow: column;
+  }
+
   .salt-infoblock h2 {
-    font-size: 2em;
+    font-size: 2rem;
     
   }
   .salt-infoblock p {
